--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,10 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100vh;
+  background-image: url(./img/map-day.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 @layer utilities {
