--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   height: 100vh;
-  background-image: url(./img/map-day.png);
+  background-image: url(./img/map.jpeg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
