--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
   height: 100vh;
   background-image: url(./img/map.jpeg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  max-width: 430px;
 }
 
 @layer utilities {
